third_party/move/move-compiler-v2/tests/checking/typing/return_type_last_exp_invalid.exp

Diagnostics:
error: expected `u64` but found `()`
  ┌─ tests/checking/typing/return_type_last_exp_invalid.move:5:9
  │
5 │         ()
  │         ^^

error: expected `()` but found `integer`
  ┌─ tests/checking/typing/return_type_last_exp_invalid.move:9:9
  │
9 │         0
  │         ^

error: expected 2 item(s), found 3
   ┌─ tests/checking/typing/return_type_last_exp_invalid.move:13:9
   │
13 │         (0, false, R{})
   │         ^^^^^^^^^^^^^^^

error: expected 4 item(s), found 3
   ┌─ tests/checking/typing/return_type_last_exp_invalid.move:17:9
   │
17 │         (0, false, R{})
   │         ^^^^^^^^^^^^^^^

error: expected `bool` but found `integer`
   ┌─ tests/checking/typing/return_type_last_exp_invalid.move:21:10
   │
21 │         (0, false, R{})
   │          ^

error: expected `u64` but found `bool`
   ┌─ tests/checking/typing/return_type_last_exp_invalid.move:21:13
   │
21 │         (0, false, R{})
   │             ^^^^^
